implementation authentication and login

--- a/src/app/components/category/category.component.html
+++ b/src/app/components/category/category.component.html
@@ -12,7 +12,7 @@
           <td>{{category.name}}</td>
           <td>
             <button type="button" class="btn fafaIconColor" data-bs-toggle="modal" data-bs-target="#addCategotyModal"
-              title="Save">
+              title="Save" (click)="open()">
               <i class="fa fa-plus"></i>
             </button>
             <button type="button" class="btn" data-bs-toggle="modal" data-bs-target="#editCategotyModal" title="Edit"
