--- a/src/app/components/login/login.component.scss
+++ b/src/app/components/login/login.component.scss
@@ -5,7 +5,9 @@
   padding: 8% 0 0;
   margin: auto;
 }
-
+.createAccountButton{
+  margin: 0.5rem 0 0 0;
+}
 .form {
   position: relative;
   z-index: 1;
