--- a/src/app/components/register/register.component.html
+++ b/src/app/components/register/register.component.html
@@ -1,7 +1,7 @@
 <div class="login-page">
   <div class="form">
     <form [formGroup]="registerForm" class="login-form">
-      <input type="text" class="form-control" id="username" formControlName="username"
+      <input type="text" class="form-control inputFields" id="username" formControlName="username"
         [ngClass]="{'is-invalid': isUserNameInvalid()}" placeholder="username">
       <div *ngIf="isUserNameInvalid()" class="text-danger validationMessage">
         <div *ngIf="registerForm.get('username').errors?.required">User Name is required.</div>
@@ -11,16 +11,16 @@
       </div>
 
 
-      <input type="email" class="form-control" id="email" formControlName="email"
-        [ngClass]="{'is-invalid': isEmailInvalid()}" placeholder="email">
+      <input type="email" class="form-control inputFields" id="email" formControlName="email"
+        [ngClass]="{'is-invalid': isEmailInvalid()}" placeholder="Email ID">
       <div *ngIf="isEmailInvalid()" class="text-danger validationMessage">
-        <div *ngIf="registerForm.get('email').errors?.required">User Name is required.</div>
+        <div *ngIf="registerForm.get('email').errors?.required">Email ID is required.</div>
       </div>
       
 
 
-      <input type="password" class="form-control" id="password" formControlName="password"
-        [ngClass]="{'is-invalid': isPasswordInvalid()}" placeholder="password">
+      <input type="password" class="form-control inputFields" id="password" formControlName="password"
+        [ngClass]="{'is-invalid': isPasswordInvalid()}" placeholder="Password">
       <div *ngIf="isPasswordInvalid()" class="text-danger validationMessage">
         <div *ngIf="registerForm.get('password').errors?.required">Password is required.</div>
         <div *ngIf="registerForm.get('password').errors?.minlength">Password must be at least 3 characters
@@ -28,8 +28,5 @@
         </div>
       </div>
     </form>
-    <button (click)="onRegister()" class="btn btn-primary">Register</button>
-    <!-- <button type="button" class="btn btn-primary" (click)="openModal()">Open Registration Modal</button>
-    <app-modal></app-modal>
-  </div> -->
+    <button (click)="onRegister()" class="btn btn-primary registerButton" [disabled]="!registerForm.valid">Register</button>
 </div>
