--- a/src/app/components/register/register.component.scss
+++ b/src/app/components/register/register.component.scss
@@ -1,3 +1,11 @@
 .validationMessage {
-    margin: 0 105px 4px 0px;
-  }
+  margin: 0.5rem 16rem 4px 0px;
+}
+
+.inputFields{
+  margin: 0.5rem 0rem 0 0;
+}
+
+.registerButton{
+  margin: 1rem 20rem 0 0;
+}
