--- a/src/app/components/modal/modal.component.html
+++ b/src/app/components/modal/modal.component.html
@@ -2,7 +2,7 @@
   <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-header">
-        <h5 class="modal-title">Register</h5>
+        <h5 class="modal-title">Create an account</h5>
         <button type="button" class="btn-close" (click)="close()" aria-label="Close"></button>
       </div>
       <div class="modal-body">
