--- a/src/app/components/category/category.component.html
+++ b/src/app/components/category/category.component.html
@@ -1,33 +1,37 @@
-<div class="row align-items-center">
-  <div class="col-6 col-md-4">
-    <table class="table">
-      <thead>
-        <tr>
-          <th scope="col">Category Name</th>
-          <th scope="col">Action</th>
-        </tr>
-      </thead>
-      <tbody>
-        <tr *ngFor="let category of lstAllCategories">
-          <td>{{category.name}}</td>
-          <td>
-            <button type="button" class="btn fafaIconColor" data-bs-toggle="modal" data-bs-target="#addCategotyModal"
-              title="Save" (click)="open()">
-              <i class="fa fa-plus"></i>
-            </button>
-            <button type="button" class="btn" data-bs-toggle="modal" data-bs-target="#editCategotyModal" title="Edit"
-              (click)="editOpen(category.id)">
-              <i class="fa fa-pencil" aria-hidden="true"></i>
-            </button>
-            <button type="button" class="btn" title="Delete" (click)="deleteCategoryAsync(category.id)">
-              <i class="fa fa-trash" aria-hidden="true"></i>
-            </button>
-          </td>
-        </tr>
-      </tbody>
-    </table>
+<body>
+  <div class="container mt-5">
+    <div class="row align-items-center">
+      <div class="col-12 col-md-8">
+        <table class="table table-bordered table-striped">
+          <thead>
+            <tr>
+              <th scope="col">Category Name</th>
+              <th scope="col">Action</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr *ngFor="let category of lstAllCategories">
+              <td>{{category.name}}</td>
+              <td>
+                <button type="button" class="btn fafaIconColor" data-bs-toggle="modal"
+                  data-bs-target="#addCategotyModal" title="Save" (click)="open()">
+                  <i class="fa fa-plus"></i> Save
+                </button>
+                <button type="button" class="btn btn-warning" data-bs-toggle="modal" data-bs-target="#editCategotyModal"
+                  title="Edit" (click)="editOpen(category.id)">
+                  <i class="fa fa-pencil" aria-hidden="true"></i> Edit
+                </button>
+                <button type="button" class="btn btn-danger" title="Delete" (click)="deleteCategoryAsync(category.id)">
+                  <i class="fa fa-trash" aria-hidden="true"></i> Delete
+                </button>
+              </td>
+            </tr>
+          </tbody>
+        </table>
+      </div>
+    </div>
   </div>
-</div>
+</body>
 <div class="modal fade" id="addCategotyModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
   <div class="modal-dialog">
     <div class="modal-content">
@@ -78,7 +82,6 @@
             (click)="updateCategoryAsync()">Edit</button>
         </form>
       </div>
-
       <div class="modal-footer">
         <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
       </div>
