--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,23 +1,22 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <div class="container-fluid">
-    <div class="collapse navbar-collapse" id="navbarText">
-      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-        <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="/home">Home</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="/product">Product</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="/category">Category</a>
-        </li>
-      </ul>
+<body>
+  <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <div class="container-fluid">
+      <div class="collapse navbar-collapse" id="navbarText">
+        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="/home">Home</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/product">Product</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/category">Category</a>
+          </li>
+        </ul>
 
-      <button *ngIf="authService.isAuthenticated()" (click)="onLogout()">Logout</button>
-      <a routerLink="/login" *ngIf="!authService.isAuthenticated()"></a>
-      <!-- <span class="navbar-text">
-          Navbar text with an inline element
-        </span> -->
+        <button *ngIf="authService.isAuthenticated()" (click)="onLogout()">Logout</button>
+        <a routerLink="/login" *ngIf="!authService.isAuthenticated()">Login</a>
+      </div>
     </div>
-  </div>
-</nav>
+  </nav>
+</body>
