--- a/src/app/components/modal/modal.component.scss
+++ b/src/app/components/modal/modal.component.scss
@@ -1,25 +1,68 @@
+/* Example modal CSS */
+
 .modal {
+  display: none; /* Hidden by default */
   position: fixed;
   top: 0;
   left: 0;
-  z-index: 1050;
   width: 100%;
   height: 100%;
-  overflow: hidden;
-  outline: 0;
-  background-color: rgba(0, 0, 0, 0.5);
+  z-index: 1050;
+  background-color: rgba(0, 0, 0, 0.5); /* Semi-transparent background */
+  overflow: auto;
+}
+
+.modal.show {
+  display: block; /* Show modal when isVisible is true */
 }
 
 .modal-dialog {
-  position: relative;
-  margin: 10% auto;
+  margin: 10% auto; /* Center modal vertically */
+  max-width: 600px;
 }
 
-.show {
-  display: block !important;
+.modal-content {
+  background-color: #fff;
+  border-radius: 10px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
 }
+
+.modal-header {
+  padding: 15px;
+  border-bottom: 1px solid #dee2e6;
+}
+
+.modal-title {
+  margin: 0;
+}
+
+.modal-body {
+  padding: 15px;
+}
+
+.modal-footer {
+  padding: 15px;
+  border-top: 1px solid #dee2e6;
+  text-align: right;
+}
+.modal-dialog {
+  width: 80%; /* Responsive width */
+  max-width: 29rem; /* Maximum width */
+}
+
 
 .btn-close {
   background: none;
   border: none;
+  cursor: pointer;
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  font-size: 1.5rem;
+  color: #000;
+  opacity: 0.5;
+}
+
+.btn-close:hover {
+  opacity: 1;
 }
