--- a/src/app/components/product/product.component.html
+++ b/src/app/components/product/product.component.html
@@ -1,38 +1,42 @@
-<strong>Product Table</strong>
-<div class="row align-items-center">
-  <div class="col-6 col-md-4">
-    <table class="table">
-      <thead>
-        <tr>
-          <th scope="col">Name</th>
-          <th scope="col">Price</th>
-          <th scope="col">Category Name</th>
-          <th scope="col">Action</th>
-        </tr>
-      </thead>
-      <tbody>
-        <tr *ngFor="let product of lstAllProducts">
-          <td>{{product.name}}</td>
-          <td>{{product.price}}</td>
-          <td>{{product.categoryName}}</td>
-          <td>
-            <button type="button" class="btn fafaIconColor" data-bs-toggle="modal" data-bs-target="#addProductModal"
-              title="Save" (click)="open()">
-              <i class="fa fa-plus"></i>
-            </button>
-            <button type="button" class="btn" data-bs-toggle="modal" data-bs-target="#editProductModal" title="Edit"
-              (click)="editOpen(product.id)">
-              <i class="fa fa-pencil" aria-hidden="true"></i>
-            </button>
-            <button type="button" class="btn" title="Delete" (click)="deleteProducrAsync(product.id)">
-              <i class="fa fa-trash" aria-hidden="true"></i>
-            </button>
-          </td>
-        </tr>
-      </tbody>
-    </table>
+<body>
+  <div class="container mt-5">
+    <div class="row align-items-center mt-5">
+      <div class="col-12 col-md-8">
+        <strong>Product Table</strong>
+        <table class="table table-bordered table-striped">
+          <thead>
+            <tr>
+              <th scope="col">Name</th>
+              <th scope="col">Price</th>
+              <th scope="col">Category Name</th>
+              <th scope="col">Action</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr *ngFor="let product of lstAllProducts">
+              <td>{{product.name}}</td>
+              <td>{{product.price}}</td>
+              <td>{{product.categoryName}}</td>
+              <td>
+                <button type="button" class="btn fafaIconColor" data-bs-toggle="modal" data-bs-target="#addProductModal"
+                  title="Save" (click)="open()">
+                  <i class="fa fa-plus"></i> Save
+                </button>
+                <button type="button" class="btn btn-warning" data-bs-toggle="modal" data-bs-target="#editProductModal"
+                  title="Edit" (click)="editOpen(product.id)">
+                  <i class="fa fa-pencil" aria-hidden="true"></i> Edit
+                </button>
+                <button type="button" class="btn btn-danger" title="Delete" (click)="deleteProducrAsync(product.id)">
+                  <i class="fa fa-trash" aria-hidden="true"></i> Delete
+                </button>
+              </td>
+            </tr>
+          </tbody>
+        </table>
+      </div>
+    </div>
   </div>
-</div>
+</body>
 <div class="modal fade" id="addProductModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
   <div class="modal-dialog">
     <div class="modal-content">
@@ -42,9 +46,6 @@
       </div>
       <div class="modal-body">
         <div class="row">
-
-
-          <!-- <form [formGroup]="productForm" (ngSubmit)="addProductAsync()"> -->
           <form [formGroup]="productForm" (ngSubmit)="addProductAsync()">
             <div class="mb-3">
               <label for="name" class="form-label">Name</label>
