--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,9 @@
-
-<app-header></app-header>
-<router-outlet></router-outlet>
-
-
-
-
+<mat-drawer-container class="example-container">
+    <mat-drawer #drawer mode="side" class="example-sidenav">
+        <app-sidebar></app-sidebar>
+    </mat-drawer>
+    <mat-drawer-content>
+        <app-header (toggleSidenav)="drawer.toggle()"></app-header>
+        <router-outlet></router-outlet>
+    </mat-drawer-content>
+</mat-drawer-container>
