--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,14 +1,14 @@
 <div class="login-page">
   <div class="form">
     <form class="register-form">
-      <input type="text" placeholder="name" />
-      <input type="password" placeholder="password" />
+      <input type="text" placeholder="name" id="regiterUser" />
+      <input type="password" placeholder="password" id="registerPassword" />
       <input type="text" placeholder="email address" />
       <button>create</button>
       <p class="message">Already registered? <a href="#">Sign In</a></p>
     </form>
     <form [formGroup]="loginForm" class="login-form">
-      <input type="text" class="form-control" id="username" formControlName="username"
+      <input type="text" class="form-control" id="loginUsername" formControlName="username"
         [ngClass]="{'is-invalid': isUserNameInvalid()}" placeholder="username">
       <div *ngIf="isUserNameInvalid()" class="text-danger validationMessage">
         <div *ngIf="loginForm.get('username').errors?.required">User Name is required.</div>
@@ -16,7 +16,7 @@
           characters long.
         </div>
       </div>
-      <input type="password" class="form-control" id="password" formControlName="password"
+      <input type="password" class="form-control" id="LoginPassword" formControlName="password"
         [ngClass]="{'is-invalid': isPasswordInvalid()}" placeholder="password">
       <div *ngIf="isPasswordInvalid()" class="text-danger validationMessage">
         <div *ngIf="loginForm.get('password').errors?.required">Password is required.</div>
