--- a/src/app/components/sidebar/sidebar.component.html
+++ b/src/app/components/sidebar/sidebar.component.html
@@ -1,6 +1,1 @@
-<mat-nav-list>
-    <mat-list-item *ngFor="let nav of navLinks">
-      <a mat-line [routerLink]="nav.link" routerLinkActive="router-link-active">{{ nav.label }}</a>
-    </mat-list-item>
-  </mat-nav-list>
-  
+<h1>This is Sidebar Components</h1>
