--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-lg custom-navbar">
   <div class="container-fluid">
-    <a class="navbar-brand" href="/">Brand</a>
+    <a class="navbar-brand">Aditya Collections</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -16,15 +16,18 @@
           <a class="nav-link" routerLink="/category" routerLinkActive="active">Category</a>
         </li>
         <li class="nav-item">
+          <a class="nav-link" routerLink="/medicine" routerLinkActive="active">Medicine</a>
+        </li>
+        <li class="nav-item">
           <a class="nav-link" routerLink="/profile" routerLinkActive="active">Profile</a>
         </li>
       </ul>
-      <ul class="navbar-nav ml-auto">
+      <ul class="navbar-nav ms-auto">
         <li class="nav-item" *ngIf="authService.isAuthenticated()">
-          <button class="btn btn-outline-light" (click)="onLogout()">Logout</button>
+          <button class="btn btn-outline-light btn-logout" (click)="onLogout()">Logout</button>
         </li>
         <li class="nav-item" *ngIf="!authService.isAuthenticated()">
-          <a class="btn btn-outline-light" routerLink="/login">Login</a>
+          <a class="btn btn-outline-light btn-login" routerLink="/login">Login</a>
         </li>
       </ul>
     </div>
