--- a/src/app/components/product/product.component.scss
+++ b/src/app/components/product/product.component.scss
@@ -27,3 +27,53 @@ body {
   .btn.fafaIconColor:hover {
     background-color: #0056b3;
   }
+
+  /* src/app/image-display/image-display.component.css */
+.image-container {
+  text-align: center;
+  margin-top: 20px;
+}
+
+.product-image {
+  max-width: 20%;
+  height: auto;
+}
+
+.no-products-message {
+  text-align: center;
+  padding: 20px;
+  font-size: 18px;
+  color: #333;
+  border-radius: 10px;
+  background: linear-gradient(135deg, #f9f9f9, #e0e0e0);
+  margin-top: 20px;
+  box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
+  position: relative;
+}
+
+.no-products-message i {
+  font-size: 50px;
+  color: #f44336; /* Red color for the icon */
+  display: block;
+  margin-bottom: 10px;
+}
+
+.no-products-message p {
+  margin: 0;
+  font-weight: bold;
+  font-family: 'Arial', sans-serif;
+  color: #555;
+}
+
+.no-products-message::before {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.05);
+  border-radius: 10px;
+  z-index: -1;
+}
+
