--- a/src/styles.scss
+++ b/src/styles.scss
@@ -15,6 +15,13 @@
     background-color: rgb(0,0,0); /* Fallback color */
     background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
   }
+
+  .logo {
+    display: block;
+    margin: 20px auto;
+    max-width: 100px;
+    height: auto;
+  }
   
   .modal-content {
     background-color: #fefefe;
