--- a/src/app/components/category/category.component.html
+++ b/src/app/components/category/category.component.html
@@ -3,7 +3,8 @@
     <div class="row align-items-center">
       <div class="col-12 col-md-8">
         <strong>Category Table</strong>
-        <table class="table table-bordered table-striped" *ngIf="lstAllCategories.length > 0; else noCategories">
+        <h2>Category List</h2>
+        <table class="table table-bordered table-striped" *ngIf="categories.length > 0; else noCategories">
           <thead>
             <tr>
               <th scope="col">Category Name</th>
@@ -11,7 +12,7 @@
             </tr>
           </thead>
           <tbody>
-            <tr *ngFor="let category of lstAllCategories">
+            <tr *ngFor="let category of categories">
               <td>{{category.name}}</td>
               <td>
                 <button type="button" class="btn btn-warning" data-bs-toggle="modal" data-bs-target="#editCategoryModal"
@@ -31,6 +32,26 @@
             <p>No Category available.</p>
           </div>
         </ng-template>
+        <nav *ngIf="totalPages > 1">
+          <ul class="pagination">
+            <li class="page-item" [class.disabled]="currentPage === 1">
+              <a class="page-link" (click)="onPageChange(1)">First</a>
+            </li>
+            <li class="page-item" [class.disabled]="currentPage === 1">
+              <a class="page-link" (click)="onPageChange(currentPage - 1)">Previous</a>
+            </li>
+            <li class="page-item" *ngFor="let page of [].constructor(totalPages); let i = index"
+                [class.active]="currentPage === (i + 1)">
+              <a class="page-link" (click)="onPageChange(i + 1)">{{ i + 1 }}</a>
+            </li>
+            <li class="page-item" [class.disabled]="currentPage === totalPages">
+              <a class="page-link" (click)="onPageChange(currentPage + 1)">Next</a>
+            </li>
+            <li class="page-item" [class.disabled]="currentPage === totalPages">
+              <a class="page-link" (click)="onPageChange(totalPages)">Last</a>
+            </li>
+          </ul>
+        </nav>
         <div class="text-end">
           <button type="button" class="btn fafaIconColor" data-bs-toggle="modal" data-bs-target="#addCategoryModal"
             title="Add" (click)="open()">
