--- a/src/app/components/category/category.component.scss
+++ b/src/app/components/category/category.component.scss
@@ -40,6 +40,9 @@ body {
   box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
   position: relative;
 }
+.addMarginButton {
+  margin-left: 31rem;
+}
 
 .no-products-message i {
   font-size: 50px;
