--- a/src/app/components/main-content/main-content.component.html
+++ b/src/app/components/main-content/main-content.component.html
@@ -1,7 +1,11 @@
 <div class="main-content">
     <h1>Main Content</h1>
     <p>This is the main content area.</p>
-  </div>
-  
 
+  </div>
+
+  <button type="button" class="btn btn-warning" (click)="spinnerStart()">  SpinnerStartHere
+  </button>
+  
+<app-protected></app-protected>
   
