--- a/src/app/components/product/product.component.scss
+++ b/src/app/components/product/product.component.scss
@@ -1,34 +1,42 @@
 body {
-    font-family: 'Roboto', sans-serif;
-  }
-  .table {
-    background-color: #ffffff;
-    border-radius: 8px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    border: 1px solid #dee2e6; /* Add border to table */
-  }
-  .table thead th {
-    background-color: #f8f9fa;
-    font-weight: bold;
-  }
-  .table tbody tr:hover {
-    background-color: #f1f1f1;
-  }
-  .btn {
-    margin-right: 0.5em;
-  }
-  .btn i {
-    margin-right: 0.3em;
-  }
-  .btn.fafaIconColor {
-    background-color: #007bff;
-    color: #ffffff;
-  }
-  .btn.fafaIconColor:hover {
-    background-color: #0056b3;
-  }
+  font-family: 'Roboto', sans-serif;
+}
 
-  /* src/app/image-display/image-display.component.css */
+.table {
+  background-color: #ffffff;
+  border-radius: 8px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  border: 1px solid #dee2e6;
+  /* Add border to table */
+}
+
+.table thead th {
+  background-color: #f8f9fa;
+  font-weight: bold;
+}
+
+.table tbody tr:hover {
+  background-color: #f1f1f1;
+}
+
+.btn {
+  margin-right: 0.5em;
+}
+
+.btn i {
+  margin-right: 0.3em;
+}
+
+.btn.fafaIconColor {
+  background-color: #007bff;
+  color: #ffffff;
+}
+
+.btn.fafaIconColor:hover {
+  background-color: #0056b3;
+}
+
+/* src/app/image-display/image-display.component.css */
 .image-container {
   text-align: center;
   margin-top: 20px;
@@ -51,9 +59,14 @@ body {
   position: relative;
 }
 
+.addMarginButton {
+  margin-left: 41rem;
+}
+
 .no-products-message i {
   font-size: 50px;
-  color: #f44336; /* Red color for the icon */
+  color: #f44336;
+  /* Red color for the icon */
   display: block;
   margin-bottom: 10px;
 }
@@ -76,4 +89,3 @@ body {
   border-radius: 10px;
   z-index: -1;
 }
-
